--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">مخارج الحروف</string>
-    <string name="madeBy">Made By Muhammad Bilal (BCSF18M029)</string>
+    <string name="madeBy">Made By Muhammad Bilal (BCSF18M029) 🚀</string>
+    <string name="tutorial">Take Tutorial</string>
+    <string name="quiz">Take Quiz</string>
+    <string name="github">Git Repo Details</string>
 </resources>
