Added basic Tutorial UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="tutorial">Take Tutorial</string>
     <string name="quiz">Take Quiz</string>
     <string name="github">Git Repo Details</string>
+    <string name="tutorial_header">Tutorial</string>
 </resources>
