Added landscape mode for Tutorial activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="quiz">Take Quiz</string>
     <string name="github">Git Repo Details</string>
     <string name="tutorial_header">Tutorial</string>
+    <string name="github_header">Github</string>
 </resources>
