Divided tutorial code to datasource file and model file

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,50 @@
     <string name="github_header">Github</string>
     <string name="open_git_repo">Open Git Repo</string>
     <string name="git_commits">Git Commits</string>
+    <string name="quizHeader">Quiz</string>
+    <string name="letters_1">أ ہ</string>
+    <string name="letters_2">غ خ</string>
+    <string name="letters_3">ع ح</string>
+    <string name="letters_4">ق</string>
+    <string name="letters_5">ک</string>
+    <string name="letters_6">ج ش ی</string>
+    <string name="letters_7">ض</string>
+    <string name="letters_8">ل</string>
+    <string name="letters_9">ن</string>
+    <string name="letters_10">ر</string>
+    <string name="letters_11">ت د ط</string>
+    <string name="letters_12">ظ ذ ث</string>
+    <string name="letters_13">ص ز س</string>
+    <string name="letters_14">م ن</string>
+    <string name="letters_15">ف</string>
+    <string name="letters_16">ب</string>
+    <string name="letters_17">م</string>
+    <string name="letters_18">و</string>
+    <string name="letters_19">باَ بوُ بىِ</string>
+    <string name="sounds_1">End of Throat</string>
+    <string name="sounds_2">Middle of Throat</string>
+    <string name="sounds_3">Start of the Throat</string>
+    <string name="sounds_4">Base of Tongue which is near Uvula touching the mouth roof</string>
+    <string name="sounds_5">Portion of Tongue near its base touching the roof of mouth</string>
+    <string name="sounds_6">Tongue touching the center of the mouth roof</string>
+    <string name="sounds_7">One side of the tongue touching the molar teeth</string>
+    <string name="sounds_8">Rounded tip of the tongue touching the base of the frontal 8 teeth</string>
+    <string name="sounds_9">Rounded tip of the tongue touching the base of the frontal 6 teeth</string>
+    <string name="sounds_10">Rounded tip of the tongue and some portion near it touching the base of the frontal 4 teeth</string>
+    <string name="sounds_11">Tip of the tongue touching the base of the front 2 teeth</string>
+    <string name="sounds_12">Tip of the tongue touching the tip of the frontal 2 teeth</string>
+    <string name="sounds_13">Tip of the tongue comes between the front top and bottom teeth</string>
+    <string name="sounds_14">While pronouncing the ending sound of  م  or ن , bring the vibration to the nose</string>
+    <string name="sounds_16">Inner part of the both lips touch each other</string>
+    <string name="sounds_15">Tip of the two upper jaw teeth touches the inner part of the lower lip</string>
+    <string name="sounds_17">Outer part of both lips touch each other</string>
+    <string name="sounds_18">Rounding both lips and not closing the mouth</string>
+    <string name="sounds_19">Mouth empty space while speaking words like  باَ بوُ بىِ</string>
+    <string name="regions_1">1. Halqiyah</string>
+    <string name="regions_2">2. Lahatiyah</string>
+    <string name="regions_3">3. Shajariyah-Haafiyah</string>
+    <string name="regions_4">4. Tarfiyah</string>
+    <string name="regions_5">5. Nit-eeyah</string>
+    <string name="regions_6">6. Lisaveyah</string>
+    <string name="regions_7">7. Ghunna</string>
 </resources>
