Created basic Quiz UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,5 @@
     <string name="regions_5">5. Nit-eeyah</string>
     <string name="regions_6">6. Lisaveyah</string>
     <string name="regions_7">7. Ghunna</string>
+    <string name="sectionHeader">Section 1 - Identify Letter</string>
 </resources>
